overflow repaired and footer layout

--- a/sebamaster-movie-frontend/app/sass/inc/_root.scss
+++ b/sebamaster-movie-frontend/app/sass/inc/_root.scss
@@ -4,6 +4,7 @@
 
 md-content.md-whatsong-theme {
   background: transparent;
+  overflow: inherit;
 }
 
 body{
@@ -106,8 +107,8 @@ video {
 --------------------------*/
 
 .copyright {
-  overflow: hidden;
-  margin-top:80%;
+  position: fixed;
+  bottom: 10px;
   color: white;
   width: 100%;
   left:46px;
